--- a/domain.yml
+++ b/domain.yml
@@ -38,7 +38,7 @@ responses:
 
   utter_fallback:
   - text: "Xin lỗi, tôi chưa hiểu rõ ý bạn. Bạn có thể nói thêm không?"
-  - text: "Hơi khó hiểu, bạn có thể giải thích thêm được không?"
+  - text: "Xin lỗi, tôi chưa có thông tin về câu hỏi này. Bạn có thể hỏi điều khác không?"
 
   utter_confirm_appointment:
   - text: "Lịch hẹn của bạn đã được xác nhận. Bạn sẽ nhận được thông báo chi tiết qua email hoặc SMS!"
@@ -67,6 +67,23 @@ actions:
   - action_check_appointment_status
   - action_provide_hospital_info
   - action_save_appointment
+
+entities:
+  - patient_name
+  - phone_number
+  - address
+  - birth_year
+  - age
+  - job
+  - id_number
+  - email
+  - insurance_number
+  - doctor_name
+  - specialty
+  - date
+  - time
+  - symptom
+
 
 slots:
   patient_name:
